vbnc/vbnc/tests/Errors/30311-15.vb
Class T
    Const M_Date As Date = 3L
End Class